--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/Marchinka/No_More_Queue#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.4.10",
+    "popups": "^1.1.3",
+    "qr-image": "^3.2.0",
+    "qrcode": "^1.4.4"
   }
 }
